[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/youthMiniGame/button/normal/GameGuitarRojo.png" type="Texture" id=1]
[ext_resource path="res://scenes/youthMiniGame/MusicNote.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/mixkit-wrong-electricity-buzz-955.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.9154, 29.56 )

[node name="MusicNote" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.52552, 2.35454 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_MusicNote_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_MusicNote_body_exited"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
